# SupportBot

./: .gitignore  LICENSE  Makefile  README.md  prompts.yaml  pyproject.toml  rules.yaml
data/vectorstore/: index.pkl
doc/Epic1/: Task1_Git_Init.md
docs/: PRD_SupportBot.md  env.example
docs/Epic0/: Task1_Git_Init.md  Task2_Python_Env.md
docs/Epic1/: Task2_Python_Env.md  Task3_Telegram_Handler.md
docs/Epic2/: Tasks_Epic2_Validator.md
docs/Epic3/: Epic3.md  TR-E3.1.md  TR-E3.2.md  TR-E3.3.md  TR-E3.4.md  TR-E3.5.md  TR-E3.6.md  TR-E3.7.md
docs/Epic4/: Epic4.md  TR-E4.1.md  TR-E4.2.md  TR-E4.3.md  TR-E4.4.md  TR-E4.5.md
docs/Epic5/: Epic5.md  TR-E5.1.md
docs/prompts/: PM_epic.md  prompt_TR_planning.md  prompt_system_analyst.md
docs/test_tools/: data_prepare.ipynb  rag_search.ipynb  read_history.ipynb
src/: __init__.py  main.py
src/bot/: __init__.py  config.py  handlers.py  message_handler.py  services.py  telegram_bot.py
src/bot_agents/: __init__.py  answer_agent.py  language_validator_agent.py  models.py  retriever_agent.py  router_agent.py
src/prompts/: __init__.py  builders.py  manager.py
src/rules_manager/: __init__.py  manager.py  models.py
src/tools/: __init__.py  rag_tools.py  telegram_tools.py
src/utils/: __init__.py  config.py  embeddings.py  logger.py  memory_manager.py  rag_retriever.py  response_generator.py  telegram_utils.py  test_retriever.py
tests/agents/: test_language_validator_agent.py
tests/rules_manager/: test_rules_manager.py
